# vr_project

./: .gitignore  CMakeLists.txt  build.bat  driver.vrdrivermanifest  led_constellation.json
.claude/: settings.local.json
cpp_driver/include/: controller_device.h  display_component.h  driver_provider.h  hmd_device.h
cpp_driver/src/: controller_device.cpp  display_component.cpp  driver_factory.cpp  driver_provider.cpp  hmd_device.cpp
docs/wiring/: vr_headset_wiring.fzz
firmware/BNO055/: bno055.ino
firmware/BNO055/bno055/: bno055.ino
firmware/mega/: mega.ino
rust_core/: Cargo.toml
rust_core/src/: lib.rs  rust_bridge.h
steamvr_driver/: driver.vrdrivermanifest
steamvr_driver/input/: custom_controller_profile.json  legacy_bindings_custom_controller.json
steamvr_driver/resources/input/: actions.json  custom_controller_default.json  devboard_default.json  devboard_profile.json  legacy_bindings_custom_controller.json
